--- a/docs/modules/I18n.md
+++ b/docs/modules/I18n.md
@@ -155,7 +155,7 @@ If you want to support GrapesJS by adding a new language to our repository all y
 ## Plugin development
 
 ::: warning
-This section is dedicated **only** to plugin developers and can also be skipped in case you use [grapesjs-cli](https://github.com/GrapesJS/grapesjs-cli) to init your plugin project
+This section is dedicated **only** to plugin developers and can also be skipped in case you use [grapesjs-cli](https://github.com/GrapesJS/cli) to init your plugin project
 :::
 
 If you're developing a plugin for GrapesJS and you need to support some string localization or simply change the default one, we recommend the following structure.
@@ -207,7 +207,7 @@ export default (editor, opts = {}) => {
 The next step would be to compile your locale files into `<rootDir>/locale` directory to make them easily accessible by your users. This folder could be ignored in your git repository be should be deployd to the npm registry
 
 ::: warning
-Remember that you can skip all these long steps and init your project with [grapesjs-cli](https://github.com/GrapesJS/grapesjs-cli). This will create all the necessary folders/files/commands for you (during `init` command this step is flagged `true` by default and we recommend to keep it even in case the i18n is not required in your project)
+Remember that you can skip all these long steps and init your project with [grapesjs-cli](https://github.com/GrapesJS/cli). This will create all the necessary folders/files/commands for you (during `init` command this step is flagged `true` by default and we recommend to keep it even in case the i18n is not required in your project)
 :::
 
 
