docs: Fix a few typos
There are small typos in:
- docs/api/selector.md
- docs/api/storage_manager.md
- docs/modules/Blocks.md
- docs/modules/Components.md
- docs/modules/I18n.md
- docs/modules/Storage.md
- docs/modules/Traits.md

Fixes:
- Should read `argument` rather than `argumnet`.
- Should read `with` rather than `wiht`.
- Should read `redundant` rather than `redundent`.
- Should read `propagation` rather than `propogation`.
- Should read `performances` rather than `perfomances`.
- Should read `implementation` rather than `implemenation`.
- Should read `contributors` rather than `contributos`.
- Should read `attached` rather than `attacched`.

Signed-off-by: Tim Gates <tim.gates@iress.com>

--- a/docs/modules/I18n.md
+++ b/docs/modules/I18n.md
@@ -143,7 +143,7 @@ We need to find the way to update the UI
 If you want to support GrapesJS by adding a new language to our repository all you need to do is to follow steps below:
 
 1. First of all, be sure to check the language file in [`src/i18n/locale`](https://github.com/GrapesJS/grapesjs/blob/master/src/i18n/locale) doesn't exist already
-1. [Open a new issue](https://github.com/GrapesJS/grapesjs/issues/new?title=XX%20Language%20support) to avoid overlap with other contributos. To be sure, check also no one else has opened already an issue for the same language
+1. [Open a new issue](https://github.com/GrapesJS/grapesjs/issues/new?title=XX%20Language%20support) to avoid overlap with other contributors. To be sure, check also no one else has opened already an issue for the same language
 1. Start a new branch from `dev`
 1. Copy (in the same folder) and rename the [`en` locale file] to the name of your language of choice (be sure to be compliant to [ISO 639-1])
 1. Now you can start translating strings
