--- a/docs/api/i18n.md
+++ b/docs/api/i18n.md
@@ -23,11 +23,24 @@ Once the editor is instantiated you can use its API. Before using these methods 
 const i18n = editor.I18n;
 ```
 
-### Events
+## Available Events
+* `i18n:add` New set of messages is added.
 
-*   `i18n:add` - New set of messages is added
-*   `i18n:update` - The set of messages is updated
-*   `i18n:locale` - Locale changed
+```javascript
+editor.on('i18n:add', (messages) => { ... });
+```
+
+* `i18n:update` The set of messages is updated.
+
+```javascript
+editor.on('i18n:update', (messages) => { ... });
+```
+
+* `i18n:locale` Locale changed.
+
+```javascript
+editor.on('i18n:locale', ({ value, valuePrev }) => { ... });
+```
 
 ## setLocale
 
