--- a/docs/modules/I18n.md
+++ b/docs/modules/I18n.md
@@ -44,7 +44,7 @@ Now the editor will be translated in Italian for those browsers which default la
 ## Update strings
 
 If you need to change some default language strings you can easily update them by using [I18n API](/api/i18n.html).
-To find the correth path of the string you can check the [`en` locale file] and follow its inner path inside the locale object.
+To find the correct path of the string you can check the [`en` locale file] and follow its inner path inside the locale object.
 
 Let's say we want to update the default message of the empty state in Style Manager when no elements are selected.
 
@@ -167,7 +167,7 @@ plugin-dir
 - ...
 - src
     - index.js
-    - locale // create the locale foldar in your src
+    - locale // create the locale folder in your src
         - en.js // All default strings should be placed here
 ```
 
